--- a/backend/package.json
+++ b/backend/package.json
@@ -6,17 +6,15 @@
   "author": "Goutam Singh Sumbria",
   "type": "module",
   "main": "index.js",
-
   "scripts": {
     "dev": "nodemon src/app.js",
     "start": "node src/app.js",
     "prod": "pm2 src/app.js"
   },
-
-
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "http-status": "^2.1.0",
     "mongoose": "^9.0.0",
